fix - rot padding on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 #root {
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 
 :root {
@@ -281,7 +281,7 @@ nav > div > img {
 
 @media only screen and (max-width: 560px) {
   #root {
-    --content-width: 400px;
+    --content-width: 380px;
   }
   .nav--full {
     display: none;
@@ -289,9 +289,9 @@ nav > div > img {
 
   .codecard {
     min-height: auto;
-    max-width: 400px;
+    max-width: 380px;
     height: auto;
-    width: auto:
+    width: auto;
   }
   .introduction--col {
     max-width: var(--content-width);
